[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Background1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/playbtn.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=3]
[ext_resource path="res://theboldfont.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sounds/Button.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 272.0
margin_top = 94.0
margin_right = 528.0
margin_bottom = 506.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 256.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score : "
align = 1

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 256.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Best : "
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 256.0
margin_bottom = 412.0
alignment = 1

[node name="TextureButton" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 256.0
texture_normal = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CenterContainer/VBoxContainer/HBoxContainer/TextureButton"]
stream = ExtResource( 5 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
